test/libsolidity/syntaxTests/inlineAssembly/invalid/missing_variable_in_assign.sol
contract C {
  function f() public pure {
    assembly {
      let x := mload(0)
      := 1
    }
  }
}
// ----
// ParserError: (87-89): Literal, identifier or instruction expected.
